@@ -11,6 +11,7 @@ import java.io.IOException
 import java.net.HttpURLConnection
 import java.net.URI
 import java.security.MessageDigest
+import java.util.Locale
 import javax.xml.parsers.DocumentBuilderFactory
 import kotlin.io.encoding.Base64
 
@@ -46,11 +47,12 @@ val resourcesDirName = when {
     else -> throw IllegalStateException("Unsupported platform: $os $arch")
 }
 
-val APP_ID: String by rootProject.extra
-val VER_CODE: Int by rootProject.extra
-val VER_NAME: String by rootProject.extra
-val APP_NAME: String by rootProject.extra
-val APP_NAME_NO_SPACES: String by rootProject.extra
+val APP_ID = rootProject.extra["APP_ID"] as String
+val VER_CODE = rootProject.extra["VER_CODE"] as Int
+val VER_NAME = rootProject.extra["VER_NAME"] as String
+val APP_NAME = rootProject.extra["APP_NAME"] as String
+val APP_NAME_NO_SPACES = rootProject.extra["APP_NAME_NO_SPACES"] as String
+
 val localProperties = gradleLocalProperties(rootDir, project.providers)
     .map { it.key to it.value.toString() }
     .toMap()
@@ -292,15 +294,10 @@ compose.desktop {
             "-Dpano.native.components.path=$libraryPath",
             "--enable-native-access=ALL-UNNAMED",
             if (os.isLinux) "--add-opens=java.desktop/sun.awt.X11=ALL-UNNAMED" else null,
-            "-H:+UnlockExperimentalVMOptions",
             "-Dfile.encoding=UTF-8",
             "-Dnative.encoding=UTF-8",
 //            "-XX:NativeMemoryTracking=detail",
             "-XX:+UseSerialGC",
-            "-XX:+UseAdaptiveSizePolicy",
-//            "-XX:+UseZGC",
-//            "-XX:ZUncommitDelay=60",
-            "-XX:+UseStringDeduplication",
             "-Xms32m",
             "-Xmx512m",
         )
@@ -509,6 +506,18 @@ tasks.register<Exec>("generateRc") {
     }
 }
 
+val copyReachabilityMetadata by tasks.registering(Copy::class) {
+    val osDir = if (os.isWindows) "windows" else "linux"
+    from("rechability-metadata/$osDir")
+    into(layout.buildDirectory.dir("generated/reachability-metadata/META-INF/native-image/$APP_ID/$APP_NAME_NO_SPACES"))
+}
+
+kotlin.sourceSets.getByName("desktopMain").resources.srcDir(
+    copyReachabilityMetadata.map {
+        it.destinationDir.parentFile.parentFile.parentFile.parentFile
+        // points to: generated/reachability-metadata/
+    }
+)
 // graalvm plugin doesn't seem to support this project structure, so directly use the command
 tasks.register<Exec>("buildNativeImage") {
     val graalvmHome = System.getenv("GRAALVM_HOME")
@@ -539,9 +548,6 @@ tasks.register<Exec>("buildNativeImage") {
     val outputDir = file("build/compose/native/$resourcesDirName")
     val outputFile = File(outputDir, APP_NAME_NO_SPACES)
 
-    val reachabilityFiles = file(
-        "rechability-metadata/" + if (os.isWindows) "windows" else "linux"
-    )
     val jawtDirName = if (os.isWindows)
         "bin"
     else
@@ -556,6 +562,8 @@ tasks.register<Exec>("buildNativeImage") {
     val winAppResFile =
         project.layout.buildDirectory.file("generated-rc/$APP_NAME_NO_SPACES.exe.res")
 
+    val localesTextFile = file("locales.txt")
+
     val nativeLibsDir = file("resources/$resourcesDirName/")
     val iconFile = file("src/desktopMain/composeResources/drawable/ic_launcher_with_bg.svg")
     val desktopFile = file("$APP_NAME_NO_SPACES.desktop")
@@ -564,7 +572,6 @@ tasks.register<Exec>("buildNativeImage") {
 
     inputs.file(jarFile)
     inputs.dir(nativeLibsDir)
-    inputs.dir(reachabilityFiles)
     inputs.file(licenseFile)
 
     outputs.dir(outputDir)
@@ -574,7 +581,6 @@ tasks.register<Exec>("buildNativeImage") {
             "$graalvmHome\\bin\\native-image.cmd"
         else
             "$graalvmHome/bin/native-image",
-        "--no-fallback",
 //        "-march=" + if (arch in archArm64) "armv8.1-a" else "x86-64-v2",
         if (arch in archAmd64) "-march=x86-64-v2" else null,
         if (os.isLinux && arch in archArm64) "-H:PageSize=16384" else null,
@@ -584,16 +590,18 @@ tasks.register<Exec>("buildNativeImage") {
         "-J-Dfile.encoding=UTF-8",
         "-J-Dnative.encoding=UTF-8",
         "-J-Dsun.java2d.dpiaware=true",
-        "-H:ConfigurationFileDirectories=" + reachabilityFiles.absolutePath,
+        "--exact-reachability-metadata",
+        "-H:MissingRegistrationReportingMode=Warn",
         "-R:MaxHeapSize=300M",
         "--initialize-at-build-time=kotlin.text.Charsets",
-        "--future-defaults=all",
+//        "--future-defaults=all",
         "-H:+AddAllCharsets",
         "-H:+ReportExceptionStackTraces",
 //        "-g",
 //        "--enable-monitoring=nmt",
         "--enable-native-access=ALL-UNNAMED",
         "--include-locales",
+        "-H:IncludeLocales=" + localesTextFile.readText().trim().replace("\n", ","),
 //        "--install-exit-handlers",
         // I use trustStoreType=Windows-ROOT at runtime
         if (os.isWindows) "-J-Djavax.net.ssl.trustStore=NONE" else null,
@@ -846,6 +854,7 @@ tasks.register("fetchCrowdinLanguages") {
     val tokenProvider = project.provider { localProperties["crowdin.token"]!! }
     val localesConfigFile = file("src/androidMain/res/xml/locales_config.xml")
     val localeUtilsFile = file("src/commonMain/kotlin/com/arn/scrobble/utils/LocaleUtils.kt")
+    val localesTextFile = file("locales.txt")
 
     outputs.file(localesConfigFile)
     outputs.file(localeUtilsFile)
@@ -883,6 +892,24 @@ tasks.register("fetchCrowdinLanguages") {
                     } + "en"
                     ).sorted()
 
+            val localesWithNames = languagesFiltered.map {
+                val localeObj = Locale.forLanguageTag(it)
+                val displayLanguage = localeObj.getDisplayLanguage(localeObj)
+
+                val suffix = when (localeObj.language) {
+                    "zh" -> " " + localeObj.getDisplayScript(localeObj)
+                    "pt" -> localeObj.getDisplayCountry(localeObj)
+                        .ifEmpty { null }
+                        ?.let { " $it" } ?: ""
+
+                    else -> ""
+                }
+
+                it to displayLanguage + suffix
+            }.sortedWith { (k1, v1), (k2, v2) ->
+                v1.compareTo(v2, ignoreCase = true)
+            }
+
             // write to locale_config.xml
             val localesConfigText =
                 """<?xml version='1.0' encoding='UTF-8'?>
@@ -894,8 +921,8 @@ ${languagesFiltered.joinToString("\n") { "    <locale android:name=\"$it\" />" }
 
             // write to LocaleUtils.kt
             val localeUtilsPartialText = """
-    val localesSet = arrayOf(
-${languagesFiltered.joinToString("\n") { "        \"$it\"," }}
+    val localesMap = mapOf(
+${localesWithNames.joinToString(",\n") { "        \"${it.first}\" to \"${it.second}\"" }}
     )
 """
 
@@ -908,6 +935,9 @@ ${languagesFiltered.joinToString("\n") { "        \"$it\"," }}
                     end
                 )
             localeUtilsFile.writeText(newLocaleUtilsText)
+
+            // write to locales.txt
+            localesTextFile.writeText(languagesFiltered.joinToString("\n"))
 
             println("Crowdin languages fetched successfully.")
         } else {
